--- a/pom.xml
+++ b/pom.xml
@@ -1794,6 +1794,9 @@
               <id>source-release-assembly</id>
               <configuration>
                 <finalName>apache-beam-${project.version}</finalName>
+                <descriptors>
+                  <descriptor>src/assembly.xml</descriptor>
+                </descriptors>
               </configuration>
             </execution>
           </executions>
