[BEAM-2271] Move assembly.xml to the root folder and exclude the folders (instead of the content)

--- a/pom.xml
+++ b/pom.xml
@@ -1795,7 +1795,7 @@
               <configuration>
                 <finalName>apache-beam-${project.version}</finalName>
                 <descriptors>
-                  <descriptor>src/assembly.xml</descriptor>
+                  <descriptor>assembly.xml</descriptor>
                 </descriptors>
               </configuration>
             </execution>
