--- a/build_rules.gradle
+++ b/build_rules.gradle
@@ -454,4 +454,12 @@ ext.applyAvroNature = {
   apply plugin: "com.commercehub.gradle.plugin.avro"
 }
 
+// Help IntelliJ
+apply plugin: "idea"
 
+idea {
+  module {
+    sourceDirs += file("build/generated/source")
+    generatedSourceDirs += file("build/generated/source")
+  }
+}
