--- a/build_rules.gradle
+++ b/build_rules.gradle
@@ -67,6 +67,9 @@ repositories {
   maven { url "https://repository.apache.org/content/repositories/releases" }
 }
 
+// Help IntelliJ - specific hints are in their natures
+apply plugin: "idea"
+
 // Provide code coverage
 // TODO: Should this only apply to Java projects?
 apply plugin: "jacoco"
@@ -363,6 +366,16 @@ ext.applyJavaNature = {
       force library.java.values()
     }
   }
+
+  idea {
+    module {
+      sourceDirs += file("build/generated/source/apt/main")
+      generatedSourceDirs += file("build/generated/source/apt/main")
+
+      sourceDirs += file("build/generated/source/apt/test")
+      generatedSourceDirs += file("build/generated/source/apt/test")
+    }
+  }
 }
 
 /*************************************************************************************************/
@@ -398,6 +411,17 @@ ext.applyGoNature = {
       tasks.getByPath(project.path + ":resolveBuildDependencies").mustRunAfter tasks.getByPath(previous + ":installDependencies")
       println "Forcing: '" + project.path + ":resolveTestDependencies' must run after '" + previous + ":installDependencies'"
       tasks.getByPath(project.path + ":resolveTestDependencies").mustRunAfter tasks.getByPath(previous + ":installDependencies")
+    }
+  }
+
+  idea {
+    module {
+      // The gogradle plugin downloads all dependencies into the source tree here,
+      // which is a path baked into golang
+      excludeDirs += file("vendor")
+
+      // Don't know what is in here, but it isn't our source
+      excludeDirs += file(".gogradle")
     }
   }
 }
@@ -443,6 +467,22 @@ ext.applyGrpcNature = {
       }
     }
   }
+
+  idea {
+    module {
+      sourceDirs += file("build/generated/source/proto/main/java")
+      generatedSourceDirs += file("build/generated/source/proto/main/java")
+
+      sourceDirs += file("build/generated/source/proto/test/java")
+      generatedSourceDirs += file("build/generated/source/proto/test/java")
+
+      sourceDirs += file("build/generated/source/proto/main/grpc")
+      generatedSourceDirs += file("build/generated/source/proto/main/grpc")
+
+      sourceDirs += file("build/generated/source/proto/test/grpc")
+      generatedSourceDirs += file("build/generated/source/proto/test/grpc")
+    }
+  }
 }
 
 /*************************************************************************************************/
@@ -453,5 +493,3 @@ ext.applyAvroNature = {
   println "applyAvroNature with " + (it ? "$it" : "default configuration") + " for project $project.name"
   apply plugin: "com.commercehub.gradle.plugin.avro"
 }
-
-
