--- a/sdks/java/container/build.gradle
+++ b/sdks/java/container/build.gradle
@@ -60,8 +60,11 @@ golang {
 }
 
 docker {
-  // TODO(herohde): make the name easier to generate for releases.
-  name System.properties['user.name'] + '-docker-apache.bintray.io/beam/java:latest'
+  def repositoryRoot = System.properties["docker-repository-root"]
+  if (!repositoryRoot) {
+    repositoryRoot = "${System.properties["user.name"]}-docker-apache.bintray.io/beam"
+  }
+  name "${repositoryRoot}/java:latest"
   files "./build/"
 }
 // Ensure that we build the required resources and copy and file dependencies from related projects
