--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -90,7 +90,7 @@ commands =
   python setup.py test
 passenv = TRAVIS*
 
-[testenv:lint1]
+[testenv:lint_py2]
 deps=
   nose==1.3.7
   pycodestyle==2.3.1
@@ -106,7 +106,7 @@ commands =
   time {toxinidir}/run_pylint.sh
 passenv = TRAVIS*
 
-[testenv:lint2]
+[testenv:lint_py3]
 deps=
   nose==1.3.7
   pycodestyle==2.3.1
