--- a/sdks/java/io/xml/build.gradle
+++ b/sdks/java/io/xml/build.gradle
@@ -24,6 +24,7 @@ description = "Apache Beam :: SDKs :: Java :: IO :: XML"
 dependencies {
   compile library.java.guava
   shadow project(path: ":sdks:java:core", configuration: "shadow")
+  shadow "javax.xml.bind:jaxb-api:2.2.12"
   shadow library.java.stax2_api
   shadow library.java.findbugs_jsr305
   shadow library.java.woodstox_core_asl
