Publish python test results to jenkins.
This switches the command to nosetests, but we were already using
nose.collector so that shouldn't be an issue.

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -38,7 +38,7 @@ commands =
   - find apache_beam -type f -name '*.pyc' -delete
   pip install -e .[test]
   python apache_beam/examples/complete/autocomplete_test.py
-  python setup.py test
+  python setup.py nosetests --with-xunit
 passenv = TRAVIS*
 
 [testenv:py27cython]
@@ -67,7 +67,7 @@ commands =
   - find target/build -type f -name '*.so' -delete
   time pip install -e .[test]
   python apache_beam/examples/complete/autocomplete_test.py
-  python setup.py test
+  python setup.py nosetests --with-xunit
   # Clean up all cython generated files. Ignore if deletion fails.
   - find apache_beam -type f -name '*.c' -delete
   - find apache_beam -type f -name '*.so' -delete
@@ -87,7 +87,7 @@ commands =
   # Clean up all previous python generated files.
   - find apache_beam -type f -name '*.pyc' -delete
   python apache_beam/examples/complete/autocomplete_test.py
-  python setup.py test
+  python setup.py nosetests --with-xunit
 passenv = TRAVIS*
 
 [testenv:lint]
