--- a/sdks/java/core/pom.xml
+++ b/sdks/java/core/pom.xml
@@ -339,11 +339,11 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+<!--     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
-    </dependency>
+    </dependency> -->
 
     <dependency>
       <groupId>com.esotericsoftware.kryo</groupId>
