--- a/sdks/java/core/pom.xml
+++ b/sdks/java/core/pom.xml
@@ -345,8 +345,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <artifactId>org.objenesis</artifactId>  
-      <groupId>objenesis</groupId>  
+      <groupId>org.objenesis</groupId> 
+      <artifactId>objenesis</artifactId>  
       <version>1.0</version>
       <scope>test</scope> 
     </dependency>
