--- a/pom.xml
+++ b/pom.xml
@@ -1379,6 +1379,13 @@
       </dependency>
 
       <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
         <groupId>com.google.cloud.dataflow</groupId>
         <artifactId>google-cloud-dataflow-java-proto-library-all</artifactId>
         <version>${google-cloud-dataflow-java-proto-library-all.version}</version>
