--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -17,7 +17,7 @@
 
 [tox]
 # new environments will be excluded by default unless explicitly added to envlist.
-envlist = py27,py27gcp,py27cython,lint,docs
+envlist = py27,py27gcp,py27cython,lint_py2,lint_py3,docs
 toxworkdir = {toxinidir}/target/.tox
 
 [pycodestyle]
