Notate uses of beam-runners-core-java test-jar

--- a/pom.xml
+++ b/pom.xml
@@ -735,6 +735,7 @@
         <version>${project.version}</version>
       </dependency>
 
+      <!-- For runners to inherit from abstract StateInternalsTest -->
       <dependency>
         <groupId>org.apache.beam</groupId>
         <artifactId>beam-runners-core-java</artifactId>
