--- a/runners/java-fn-execution/build.gradle
+++ b/runners/java-fn-execution/build.gradle
@@ -49,3 +49,18 @@ dependencies {
   testCompile library.java.slf4j_simple
   testCompile library.java.truth
 }
+
+test {
+  useJUnit {
+    // Exclude tests that need Docker.
+    excludeCategories "org.apache.beam.runners.fnexecution.environment.testing.NeedsDocker"
+  }
+}
+
+task testDocker(type: Test) {
+  group = "Verification"
+  description = "Runs Docker tests"
+  useJUnit {
+    includeCategories "org.apache.beam.runners.fnexecution.environment.testing.NeedsDocker"
+  }
+}
