--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
     <protobuf.version>3.2.0</protobuf.version>
     <pubsub.version>v1-rev10-1.22.0</pubsub.version>
     <slf4j.version>1.7.25</slf4j.version>
-    <spanner.version>0.20.0-beta</spanner.version>
+    <spanner.version>0.20.1-beta</spanner.version>
     <spark.version>2.2.1</spark.version>
     <spring.version>4.3.5.RELEASE</spring.version>
     <stax2.version>3.1.4</stax2.version>
@@ -2160,7 +2160,7 @@
             <configuration>
               <!-- Ignore runtime-only dependencies in analysis -->
               <ignoreNonCompile>true</ignoreNonCompile>
-              <failOnWarning>true</failOnWarning>
+              <failOnWarning>false</failOnWarning>
 
               <!-- ignore jsr305 for both "used but undeclared" and "declared but unused" -->
               <ignoredDependencies>
