Revert fail on warning
Change-Id: I48c265331b3b0c5d57662ab073eae63816e27556

--- a/pom.xml
+++ b/pom.xml
@@ -2160,7 +2160,7 @@
             <configuration>
               <!-- Ignore runtime-only dependencies in analysis -->
               <ignoreNonCompile>true</ignoreNonCompile>
-              <failOnWarning>false</failOnWarning>
+              <failOnWarning>true</failOnWarning>
 
               <!-- ignore jsr305 for both "used but undeclared" and "declared but unused" -->
               <ignoredDependencies>
