--- a/settings.gradle
+++ b/settings.gradle
@@ -184,6 +184,8 @@ include "beam-vendor-java-grpc-v1"
 project(":beam-vendor-java-grpc-v1").dir = file("vendor/java-grpc-v1")
 include "beam-vendor-sdks-java-extensions-protobuf"
 project(":beam-vendor-sdks-java-extensions-protobuf").dir = file("vendor/sdks-java-extensions-protobuf")
+include "beam-vendor-guava-20_0"
+project(":beam-vendor-guava-20_0").dir = file("vendor/guava-20_0")
 include "beam-website"
 project(":beam-website").dir = file("website")
 include "beam-runners-google-cloud-dataflow-java-legacy-worker"
