--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -115,6 +115,7 @@ modules =
   apache_beam/testing
   apache_beam/tools
   apache_beam/typehints
+  apache_beam/transforms
 commands =
   python --version
   pip --version
