Remove blanket website from rat and add appropriate exclusions.
The exclusions here are based on examining how other Apache projects add
license headers for various file types. In particular, Apache Zepplin
seemed to be a good example [1], and in other cases doing a search
across Apache GitHub [2].

[1] https://github.com/apache/zeppelin/tree/master/docs
[2] https://github.com/search?utf8=%E2%9C%93&q=%22See+the+License+for+the+specific+language+governing+permissions%22+user%3Aapache+extension%3Ayml&type=Code&ref=advsearch&l=&l=

--- a/build.gradle
+++ b/build.gradle
@@ -122,8 +122,16 @@ rat {
     // JDBC package config files
     "**/META-INF/services/java.sql.Driver",
 
-    // TODO: [BEAM-4568] Website sources need to have apache headers
-    "website/**/*",
+    // Ruby build files
+    "**/Gemfile.lock",
+    "**/Rakefile",
+    "**/_config.yml",
+    "**/_config_test.yml",
+    "**/.htaccess",
+    "website/src/_sass/_bootstrap.scss",
+    "website/src/_sass/bootstrap/**/*",
+    "website/src/js/bootstrap*.js",
+    "website/src/js/bootstrap/**/*",
   ]
 
   // Add .gitignore excludes to the Apache Rat exclusion list. We re-create the behavior
