Makes Python PortableRunner usable via PipelineOptions

--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -197,6 +197,16 @@ task localWordCount(dependsOn: 'installGcpTest') {
   }
 }
 
+task portableWordCount(dependsOn: 'installGcpTest') {
+  doLast {
+    exec {
+      executable 'sh'
+      args '-c', ". ${envdir}/bin/activate && python -m apache_beam.examples.wordcount --output /tmp/py-wordcount-direct --experiments=beam_fn_api --runner=PortableRunner --job_endpoint=localhost:8099"
+      // TODO: Check that the output file is generated and runs.
+    }
+  }
+}
+
 task postCommitVRTests(dependsOn: 'installGcpTest') {
   doLast {
     exec {
