--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -31,6 +31,7 @@ mainClassName = "org.apache.beam.runners.flink.FlinkJobServerDriver"
 
 dependencies {
   compile project(path: ":beam-runners-flink_2.11", configuration: "shadow")
+  compile project(path: ":beam-sdks-java-extensions-google-cloud-platform-core", configuration: "shadow")
 }
 
 // NOTE: runShadow must be used in order to run the job server. The standard run
