Wrap website build in Gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -164,3 +164,5 @@ include "beam-sdks-python"
 project(":beam-sdks-python").dir = file("sdks/python")
 include "beam-sdks-python-container"
 project(":beam-sdks-python-container").dir = file("sdks/python/container")
+include "beam-website"
+project(":beam-website").dir = file("website")
