Changes portableWordCount gradle task to be runnable at master

--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -201,7 +201,8 @@ task portableWordCount(dependsOn: 'installGcpTest') {
   doLast {
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && python -m apache_beam.examples.wordcount --output /tmp/py-wordcount-direct --experiments=beam_fn_api --runner=PortableRunner --job_endpoint=localhost:8099"
+      // TODO: Figure out GCS credentials and use real GCS input and output.
+      args '-c', ". ${envdir}/bin/activate && python -m apache_beam.examples.wordcount --input /etc/profile --output /tmp/py-wordcount-direct --experiments=beam_fn_api --runner=PortableRunner --job_endpoint=localhost:8099 --sdk_location=container"
       // TODO: Check that the output file is generated and runs.
     }
   }
