Sickbay PubsubReadIT on Dataflow
This test does not pass because of idiosyncrasies of the TestDataflowRunner. It
is clearly observable that the condition under test. Getting a DirectRunner
integration test in place provides a regression test for our ability to
read public data.

--- a/runners/google-cloud-dataflow-java/build.gradle
+++ b/runners/google-cloud-dataflow-java/build.gradle
@@ -143,10 +143,12 @@ task googleCloudPlatformIntegrationTest(type: Test) {
   systemProperty "beamTestPipelineOptions", JsonOutput.toJson([
           "--runner=TestDataflowRunner",
           "--project=${dataflowProject}",
+          "--testTimeoutSeconds=1200",
           "--tempRoot=${dataflowTempRoot}",
   ])
 
   include '**/*IT.class'
+  exclude '**/PubsubReadIT.class'
   maxParallelForks 4
   classpath = configurations.googleCloudPlatformIntegrationTest
   testClassesDirs = files(project(":beam-sdks-java-io-google-cloud-platform").sourceSets.test.output.classesDirs)
