Added integration test configuration to beam-examples gradle. Fixed pipeline options issue. Added comment about running the test.

--- a/examples/java/build.gradle
+++ b/examples/java/build.gradle
@@ -20,6 +20,8 @@ import groovy.json.JsonOutput
 
 apply plugin: org.apache.beam.gradle.BeamModulePlugin
 applyJavaNature()
+provideIntegrationTestingDependencies()
+enableJavaPerformanceTesting()
 
 description = "Apache Beam :: Examples :: Java"
 ext.summary = """Apache Beam SDK provides a simple, Java-based
